Changes in Thesis. some codes attached to the appendix section

--- a/Thesis/appendix1.tex
+++ b/Thesis/appendix1.tex
@@ -23,5 +23,9 @@
 \begin{latin}
 	\lstinputlisting[style=python_style]{code/RRTalgorithm/RRT.py}
 \end{latin}
-
+\section{کد \lr{Localization}}
+\textbf{کد مکان‌یابی برای سنجش صحت پارامتر‌های دوربین و ارتباط با ربات}
+\begin{latin}
+	\lstinputlisting[style=python_style]{code/Localization/Aruco.py}
+\end{latin}
 
