--- a/Thesis/chapter2.tex
+++ b/Thesis/chapter2.tex
@@ -89,7 +89,7 @@
 \end{latin}
 
 همانطور که در شبه‌کد بالا مشخص است برنامه تا زمانی که آخرین گره گراف به ناحیه نزدیک نقطه هدف نرسد ادامه خواهد داشت. جزئیات و نحوه تولید مسیر در قطعه برنامه‌ای در پیوست موجود می‌باشد. نحوه عملکرد توابع اصلی برنامه برای تولید مسیر به شرح زیر است:
-\begin{itemize}
+\begin{enumerate}
 	\item
 	تولید یک گره تصادفی با فاصله مشخص از گره شروع
 	\item
@@ -98,7 +98,9 @@
 	در صورت معتبر بودن گره جدید با فواصل از پیش تعیین شده توسط چند قدم یال‌هایی برای گراف ایجاد می‌شود.
 	\item
 	اگر در طی این چند قدم یکی از یال‌ها با یکی از موانع برخورد داشته باشد، قدم دیگری برای رسیدن به گره جدید انتخاب می‌شود. در غیر این صورت برنامه تا رسیدن به گره جدید ادامه داده و دوباره به مرحله اول(تولید گره تصادفی) برگشت داده خواهد شد.
-\end{itemize}
+	\item
+	گراف این روند را تا زمانی که به نقطه هدف نزدیک نشود ادامه داده و در نهایت با توجه به دانستن موقعیت این نقطه، مسیر بهترین مسیر از بین مسیر‌های ساخته شده توسط گره‌های خود را انتخاب می‌کند.
+\end{enumerate}
 
 \begin{figure}[H]
 	\centering
@@ -125,14 +127,52 @@
 
 \subsection{مقدمه}
 
-مکان‌یابی یکی از جنبه‌های حیاتی در علم رباتیک است که به ربات‌ها امکان می‌دهد تا مکان و موقعیت دقیق خود را در محیط تعیین کنند. برای ربات‌ها، داشتن اطلاعات صحیح و دقیق در مورد مکان خود بسیار مهم است تا بتوانند به درستی عمل کرده و وظایف مختلفی را انجام دهند. در اینجا، ما به مکان‌یابی در رباتیک می‌پردازیم و نحوه استفاده از تگ‌های
-\lr{Aruco}
-را برای تعیین موقعیت دقیق ربات توضیح خواهیم داد.
+مکان‌یابی یکی از جنبه‌های حیاتی در علم رباتیک است که به ربات‌ها امکان می‌دهد تا مکان و موقعیت دقیق خود را در محیط تعیین کنند. برای ربات‌ها، داشتن اطلاعات صحیح و دقیق در مورد مکان خود بسیار مهم است تا بتوانند به درستی عمل کرده و وظایف مختلفی را انجام دهند. در این بخش به مکان‌یابی در ربات عنکبوتی چهارپا پرداخته خواهد‌شد. بدین منظور به انتخاب یکی از روش‌‌‌های نوین در این حوزه دست زده شد. در سال های اخیر برخی از آزمایشگاه های رباتیک در دانشگاه‌‌‌های معتبر جهان که از میان آنها می‌توان به آزمایشگاه رباتیک اپریل
+\noindent\unskip\LTRfootnote{APRIL robotics lab}
+در دانشگاه میشیگان اشاره کرد، روش‌هایی برای مکان‌یابی با استفاده از تگ‌هایی مشابه به تگ‌های معروف که با نام 
+\textbf{کیوآر کد}
+\noindent\unskip\LTRfootnote{QR code}
+شناخته شده‌اند، معرفی کرده اند.
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{./images/Chapter2/AprilTagLab}	
+	\caption[آزمایشگاه اپریل میشیگان]{ آزمایشگاه اپریل میشیگان\cite{Apriltag}}
+	\label{AprilTagLab}
+\end{figure}
+\noindent
+\unskip
 
+\newpage
 \subsection{استفاده از تگ}
-بدانید که مکان‌یابی در رباتیک به وسیله مختصات مکانی (مثلاً نقاط (x، y، z) یا مختصات خروجی (طول، عرض، ارتفاع) صورت می‌پذیرد. این اطلاعات توسط تگ‌های "Aruco" به ربات ارائه می‌شود. این تگ‌ها اطلاعاتی را شامل می‌شوند که شامل سه زاویه (roll، pitch، yaw) برای جهت‌یابی و فاصله‌ها در سه محور مختلف می‌شوند. برای دقت بیشتر در محاسبات، ما یک ماتریس را تعریف می‌کنیم که حاوی فاصله‌های مرکزی دوربین و فوکوس آن است و این ماتریس را به کد مکان‌یابی ارائه می‌دهیم. این اطلاعات به ربات امکان می‌دهند تا موقعیت و جهت خود را با دقت بیشتری تعیین کنند و وظایف خود را انجام دهند.
-\subsubsection{مقدمه}
+\subsubsection{مفاهیم اصلی}
+نحوه استفاده از تگ‌های این چنینی بر اساس روابط مثلثاتی و هندسه اقلیدسی موجود در فضا است و با داشتن اطلاعاتی همچون فاصله کانونی دوربین و مرکز آن، اطلاعاتی همچون فاصله در هر سه محور و یا زاویه دوربین نسبت به تگ را برمی‌گردانند.
+بدین منظور از یکی از ماژول‌های موجود در کتابخانه‌ی
+\lr{OpenCV}
+که
+\lr{Aruco}
+نام دارد، استفاده خواهد شد. 
+\subsubsection{شبه‌کد و تشریح جزئیات برنامه}
+
+در زیر شبه‌کد این بخش مختصرا قراره داده شده و پس از آن به تشریح کامل‌تر آن پرداخته خواهد شد.
+\section*{}
+\begin{latin}
+	\lstinputlisting[style=python_style]{code/Pseudocodes/ArucoPseudocode.py}
+\end{latin}
+
+مکان‌یابی در رباتیک به وسیله مختصات مکانی (مثلاً نقاط
+\lr{(x, y, z)}
+یا مختصات خروجی (طول، عرض، ارتفاع) صورت می‌پذیرد. این اطلاعات توسط تگ‌های
+\lr{Aruco}
+به ربات ارائه می‌شود. این تگ‌ها اطلاعاتی را شامل می‌شوند برای مثال سه زاویه
+\lr{(roll, pitch, yaw)}
+برای جهت‌یابی و فاصله‌ها در سه محور مختلف می‌شوند. برای دقت بیشتر در محاسبات، ما یک ماتریس را تعریف می‌کنیم که حاوی فاصله‌های مرکزی دوربین و فوکوس آن است و این ماتریس را به کد مکان‌یابی ارائه می‌دهیم. این اطلاعات به ربات امکان می‌دهند تا موقعیت و جهت خود را با دقت بیشتری تعیین کنند و وظایف خود را انجام دهند.
+\section*{}
+\begin{latin}
+	\lstinputlisting[style=python_style]{code/Localization/Aruco.py}
+\end{latin}
+
+
 
 \section{جمع بندی}
 
