--- a/Thesis/chapter3.tex
+++ b/Thesis/chapter3.tex
@@ -168,10 +168,8 @@
 اشاره کرد.
 مکانیزم دیگری برای نگهداری وضعیت و انتقال اطلاعات بين صفحات وجود دارد. در این مکانیزم همراه با درخواست‌ها، وضعیت قبلی را نیز از طریق
 \lr{URL}
-جدیدی که فراخوانی می‌شود، به سرور داده می‌شود. به این روش
-\lr{Query String}
-گفته می‌شود.
-
+جدیدی که فراخوانی می‌شود، به سرور داده می‌شود. به این روش کوئری استرینگ گفته می‌شود.
+\newpage
 کوئری استرینگ هر مقداریست که بعد از علامت سوال $(“?”)$ در انتهای
 \lr{URL}
 قرار می‌گیرد که می‌تواند یک یا تعداد بیشتری پارامتر باشد.
@@ -205,7 +203,7 @@
 	\item
 	\lr{\&} : برای جداسازی پارامتر‌های مختلف از این علامت استفاده می‌شود. این علامت بین مقدار پارامتر قبلی و نام پارامتر بعدی قرار می‌گیرد.
 \end{itemize}
-
+\newpage
 استفاده از این روش مزایا و معایب متفاوتی دارد که در ذیل مختصرا به آن‌ها اشاره شده‌است.
 \cite{QueryString}
 مزایا:
@@ -267,7 +265,6 @@
 
 نرخ انتقال‌های که به صورت قراردادی بین فرستنده و گیرنده در یک ارتباط سریال، مشخص می‌شود مقادیر خاصی می‌توانند داشته باشند که مقدارهای ۴۸۰۰، ۱۹۲۰۰ ،۹۶۰۰، ۳۸۴۰۰، ۵۷۶۰۰، ۱۱۵۲۰۰ (بیت بر ثانیه) از معمول‌ترین این مقادیرند. در انجام آزمایش های عملی بر روی ربات از نرخ ۱۱۵۲۰۰ بیت بر ثانیه استفاده شده است.
 %مثلاً نرخ انتقال ۹۶۰۰ به این معنی است که در هر ثانیه ۹۶۰۰ بیت منتقل می‌شود. پس هر بیت در فاصلهٔ زمانی ۱۰۴٫۱۶۶ میکروثانیه باید منتقل شود و در تمام این مدت مقدار خود را حفظ کند تا گیرنده نمونه برداری مناسبی انجام دهد.%
-
 
 
 \section{اتصال دو برد به یکدیگر}
