--- a/Thesis/chapter4.tex
+++ b/Thesis/chapter4.tex
@@ -133,5 +133,6 @@
 پین هدر ها و ...
 
 \section{جمع بندی}
-
+همانطور که در بخش های این فصل بررسی شد، تمامی سخت‌افزار های استفاده شده در پروژه اعم از الکترونیکی و یا مکانیکی و یا سایر تجهیزات همگی با در نظر گرفتن کاربری تا حدامکان بصورت اقتصادی انتخاب شده و همچنین قابل دسترس در بازار ایران می‌باشند.
+از سوی دیگر داشتن شناخت کافی از جزئیات و اطلاعات فنی هریک از سخت‌افزار‌ها منجر به انتخاب  قطعات معرفی شده در کمترین زمان ممکن انجامید.
 
