LATEX files and sources like images and codes edited

--- a/Thesis/chapter1.tex
+++ b/Thesis/chapter1.tex
@@ -70,7 +70,7 @@
 ربات‌های متحرک در انواع مختلف طراحی می‌شوند که هر یک برای انجام وظایف خاصی از مکانیزم‌های متمایز استفاده می‌کنند. ربات‌های چرخدار
 \noindent\unskip\LTRfootnote{Wheeled Robots}
 ، به عنوان مثال، از چرخ‌های محرک دارای موتورها برای حرکت و جابجایی استفاده می‌کنند. اینگونه ربات‌ها از استیکرهای تفاضلی بهره می‌برند که چرخ‌های موتورها در سمت‌های مختلف با سرعت‌های متفاوت می‌چرخند تا امکان تغییر جهت را فراهم کنند. 
-ربات‌های پاهادار
+ربات‌های پادار
 \noindent\unskip\LTRfootnote{Legged Robots}
 تلاش می‌کنند تا حرکت حیوانات را تقلید کنند و از پاها برای حرکت استفاده می‌کنند. کنترل ربات‌های پاهادار به دلیل درجات آزادی متعدد در مفاصل پیچیده‌است. ربات‌های هوایی مانند پهپادها، با استفاده از پره‌ها برای تولید لیفت و تراکم برای پرواز بهره می‌برند. این ربات‌ها نیاز به الگوریتم‌های کنترل پیچیده دارند تا پایداری و مسیر طی‌شده را مدیریت کنند.
 \cite{Craig}
@@ -108,11 +108,11 @@
 
 \subsection{ربات‌های عنکبوتی چهارپا}
 ربات‌های عنکبوتی چهارپا
-\noindent\unskip\LTRfootnote{quadruped Spider Robots}
+\noindent\unskip\LTRfootnote{Quadruped Spider Robots}
 ، با شباهت به حرکت عنکبوت‌های طبیعی، به کمک چهار پا محرک تحرک کرده و قادر به تغییر شکل در محیط‌های مختلف هستند. این انعطاف‌پذیری در حرکت، به ربات‌ها امکان حرکت در مسیرهای مختلف، شکل گیری برای عبور از موانع و تطابق با محیط را می‌دهد. علاوه بر این، استفاده از حسگرهای چندگانه مانند دوربین‌ها، ژیروسکوپ‌ها و... به ربات‌ها امکان مشاهده و تجزیه و تحلیل محیط را می‌دهد. این قابلیت‌ها به عنوان اصول مهم در ناوبری، پیمایش محیط و انجام وظایف متنوع در برنامه‌ریزی و کنترل ربات‌های عنکبوتی چهارپا مورد استفاده قرار می‌گیرد.
 برای درک بهتر یک نمونه از ربات‌های عنکبوتی چهارپا که در واقع همان ربات پایان‌نامه پیش روست و طراحی اولیه آن در محیط سالیدورک انجام شده‌است، در شکل 
 \ref{نسخه‌اولیه }
-قابل مشاهده
+قابل مشاهده می‌باشد.
 
 \begin{figure}[H]
 	\centering
