--- a/Thesis/chapter2.tex
+++ b/Thesis/chapter2.tex
@@ -29,42 +29,64 @@
 
 پردازش تصویر شامل مراحل مختلفی مانند پیش‌پردازش، تبدیلات، تشخیص الگوها، و استخراج ویژگی‌ها است. الگوریتم‌های پردازش تصویر معمولاً بر اساس مفاهیم ریاضی، آمار و هوش مصنوعی طراحی می‌شوند. از این رو می‌توان گفت پردازش تصویر در حوزه‌های مختلف از مهندسی، علوم رایانه، و علوم پایه کاربردهای متعددی داشته و از اهمیت بالایی در تحلیل و انتقال اطلاعات تصویری برخوردار است.
 
-\section{الگوریتم جستجوی سریع درخت تصادفی}
+\section{الگوریتم درخت جستجوی تصادفی}
 \subsection{مقدمه}
 همانطور که در بخش
 \ref{مروری بر الگوریتم‌های مسیریابی}
 اشاره شد، الگوریتم‌های متنوعی در رباتیک کاربرد دارد.
-
 در حوزه‌ی رباتیک، پیشرفت‌های قابل توجهی در الگوریتم‌های برنامه‌ریزی مسیر رخ داده است که به ربات‌های خودکار امکان می‌دهد تا به طور کارآمد در محیط‌های پیچیده حرکت کنند. از میان این الگوریتم‌ها، الگوریتم 
-\textbf{جستجوی سریع درخت تصادفی}
+\textbf{درخت جستجوی تصادفی}
 \noindent\unskip\LTRfootnote{Rapidly Exploring Random Tree}
 یا به اختصار
 \lr{RRT}
-به عنوان یک رویکرد نوآورانه شناخته می‌شود که به حل چالش یافتن مسیرهای قابل اجرا در فضاهای تنظیم با بعد بالا می‌پردازد. این الگوریتم به عنوان یک روش مبتنی بر هیوریستیک
-\noindent\unskip\LTRfootnote{Heuristic}
-، با استفاده از تصادف و کاوش به سرعت یک ساختار مانند درخت را ایجاد می‌کند که این امر آن را برای کاربردهای بهینه‌سازی زمان و محیط‌های پویا مناسب می‌کند. اصول اساسی این الگوریتم در قابلیت اکتشاف مؤثر فضاهای تنظیمی و تنوع آن، آن را به یک اصول اصلی در تحقیقات و کاربردهای رباتیک مدرن تبدیل کرده است.
+به عنوان یک رویکرد نوآورانه شناخته می‌شود که به حل چالش یافتن مسیرهای قابل اجرا در فضاهای تنظیم با بعد بالا می‌پردازد. 
 
-الگوریتم
-\lr{RRT}
-که در حوزه‌ی برنامه‌ریزی حرکت معرفی شده است، یک راه حل نوین برای چالش پیچیده یافتن مسیر برای عوامل خودکار در فضاهای با بعد بالا ارائه می‌دهد. در اصل، این روش به دنبال برقراری تعادل بین کاوش و بهره‌برداری می‌گردد. این الگوریتم با یک تنظیم اولیه آغاز می‌شود و به صورت تکراری با نمونه‌برداری تصادفی از نقاط در فضای تنظیمی، آن‌ها را به نزدیک‌ترین نقطه در درخت موجود متصل می‌کند. این رویکرد تضمین می‌کند که الگوریتم مناطقی از فضا را که هنوز کاوش نشده‌اند، کاوش کند، در عین حال به طور تدریجی از مناطقی که قبلاً کاوش شده‌اند بهره‌برداری می‌کند.
+این الگوریتم نیز با استفاده از جستجوی تصادفی فضای پیکربندی به حل برنامه مساله‌ریزی مسیر می‌پردازد. در این روش، ریشه درخت در پیکربندی اولیه قرار دارد. ابتدا یک نقطه به صورت تصادفی با توزیع یکنواخت
+\noindent\unskip\LTRfootnote{Uniform distribution}
+انتخاب می‌شود. اگر نقطه انتخاب شده به فضای موانع تعلق داشته باشد، نقطه دیگری انتخاب می‌شود. با انتخاب نقطه از فضای آزاد، در راستای خط واصل بین این نقطه و ریشه درخت، نقطه جدیدی تحت عنوان
+\lr{X\_new}
+که به اندازه گام ربات از ریشه فاصله دارد، انتخاب می‌شود.
+اگر بتوان
+\lr{X\_new}
+را با پاره‌خطی که تماما به فضای آزاد تعلق دارد، به ریشه وصل کرد،
+\lr{X\_new}
+به عنوان گره جدید به درخت اضافه می‌شود.
+نمایی از درخت توسعه یافته با این روش در شکل
+\ref{RRT}
+نمایش داده شده است.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.6\textwidth]{./images/Chapter2/RRT}	
+	\caption[الگوریتم \lr{RRT}]{الگوریتم \lr{RRT} \cite{MohadesKhorasani}}
+	\label{RRT}
+\end{figure}
+\noindent
+\unskip
+%این الگوریتم به عنوان یک روش مبتنی بر هیوریستیک
+% \noindent\unskip\LTRfootnote{Heuristic}
+%، با استفاده از تصادف و کاوش به سرعت یک ساختار مانند درخت را ایجاد می‌کند که این امر آن را برای کاربردهای بهینه‌سازی زمان و محیط‌های پویا مناسب می‌کند. اصول اساسی این الگوریتم در قابلیت اکتشاف مؤثر فضاهای تنظیمی و تنوع آن، آن را به یک اصول اصلی در تحقیقات و کاربردهای رباتیک مدرن تبدیل کرده است.
 
-یکی از ویژگی‌های برجسته‌ی
-\lr{RRT}
-توانایی تطبیق به محیط‌ها و محدودیت‌های مختلف است. با تشکیل تک تک نقاط درخت به طور تدریجی، رشد الگوریتم به سمت مناطقی با کاوش کمتر سوق می‌شود، که این ویژگی آن را به ویژه برای موقعیت‌هایی که فضای تنظیم مشخص نشده یا با موانع پراکنده است، مناسب می‌کند. علاوه بر این،
-\lr{RRT}
-همگام‌سازی سریع را اجرا می‌کند که به آن اجازه می‌دهد که مسیرهای قابل اجرا را به سرعت ایجاد کند، حتی در محیط‌های پیچیده و پویایی.
+%الگوریتم
+%\lr{RRT}
+%که در حوزه‌ی برنامه‌ریزی حرکت معرفی شده است، یک راه حل نوین برای چالش پیچیده یافتن مسیر برای عوامل خودکار در فضاهای با بعد بالا ارائه می‌دهد. در اصل، این روش به دنبال برقراری تعادل بین کاوش و بهره‌برداری می‌گردد. این الگوریتم با یک تنظیم اولیه آغاز می‌شود و به صورت تکراری با نمونه‌برداری تصادفی از نقاط در فضای تنظیمی، آن‌ها را به نزدیک‌ترین نقطه در درخت موجود متصل می‌کند. این رویکرد تضمین می‌کند که الگوریتم مناطقی از فضا را که هنوز کاوش نشده‌اند، کاوش کند، در عین حال به طور تدریجی از مناطقی که قبلاً کاوش شده‌اند بهره‌برداری می‌کند.
 
-قابلیت‌های این الگوریتم در کاربردهای زمان‌واقع واقعی نیز یک جنبه جذاب دیگر است. به دلیل ساختار تکراری و تطبیق‌پذیری، این الگوریتم برای مواردی که تصمیم‌گیری باید سریع و واکنش‌پذیر باشد، مناسب است. علاوه بر این، محققان اقدام به توسعه
-\lr{RRT}
-برای مواجهه با چالش‌های خاص، مانند موانع پویا و سیستم‌های چندعاملی و... کرده‌اند که بیشتر نشان می‌دهد چقدر این الگوریتم چندمنظوره و عملی است.
+%یکی از ویژگی‌های برجسته‌ی
+%\lr{RRT}
+%توانایی تطبیق به محیط‌ها و محدودیت‌های مختلف است. با تشکیل تک تک نقاط درخت به طور تدریجی، رشد الگوریتم به سمت مناطقی با کاوش کمتر سوق می‌شود، که این ویژگی آن را به ویژه برای موقعیت‌هایی که فضای تنظیم مشخص نشده یا با موانع پراکنده است، مناسب می‌کند. علاوه بر این،
+%\lr{RRT}
+%همگام‌سازی سریع را اجرا می‌کند که به آن اجازه می‌دهد که مسیرهای قابل اجرا را به سرعت ایجاد کند، حتی در محیط‌های پیچیده و پویایی.
 
-به عبارتی، الگوریتم
-\lr{RRT}
-یک الگوریتم نوآورانه برای برنامه‌ریزی مسیرهای خودکار است. با ترکیب کاوش و بهره‌برداری ،
-\lr{RRT}
-به طور موثر در فضاهای تنظیمی با بعد بالا حرکت کرده و به شکل مناسبی به شرایط محیطی مختلف تطبیق می‌یابد. چندمنظورگی، قابلیت‌های زمان‌واقع و تطبیق‌پذیری با چالش‌های خاص،
-\lr{RRT}
-را به یک ابزار ارزنده در تحقیقات و کاربردهای رباتیک مدرن تبدیل کرده است و پیشرفت‌هایی در خودکاری، کارایی و ایمنی ایجاد می‌کند.
+%قابلیت‌های این الگوریتم در کاربردهای زمان‌واقع واقعی نیز یک جنبه جذاب دیگر است. به دلیل ساختار تکراری و تطبیق‌پذیری، این الگوریتم برای مواردی که تصمیم‌گیری باید سریع و واکنش‌پذیر باشد، مناسب است. علاوه بر این، محققان اقدام به توسعه
+%\lr{RRT}
+%برای مواجهه با چالش‌های خاص، مانند موانع پویا و سیستم‌های چندعاملی و... کرده‌اند که بیشتر نشان می‌دهد چقدر این الگوریتم چندمنظوره و عملی است.
+
+%به عبارتی، الگوریتم
+%\lr{RRT}
+%یک الگوریتم نوآورانه برای برنامه‌ریزی مسیرهای خودکار است. با ترکیب کاوش و بهره‌برداری ،
+%\lr{RRT}
+%به طور موثر در فضاهای تنظیمی با بعد بالا حرکت کرده و به شکل مناسبی به شرایط محیطی مختلف تطبیق می‌یابد. چندمنظورگی، قابلیت‌های زمان‌واقع و تطبیق‌پذیری با چالش‌های خاص،
+%\lr{RRT}
+%را به یک ابزار ارزنده در تحقیقات و کاربردهای رباتیک مدرن تبدیل کرده است و پیشرفت‌هایی در خودکاری، کارایی و ایمنی ایجاد می‌کند.
 
 
 \subsection{شبیه‌سازی دوبعدی با پایتون}
@@ -175,4 +197,4 @@
 
 
 \section{جمع بندی}
-
+در این فصل با تشریح مفاهیمی از تصویر و پردازش آن و کاربرد‌های آن در زمینه‌های مختلف همچون رباتیک آغاز و با بررسی الگوریتم درخت جستجوی تصادفی و شبیه‌سازی آن در محیط پایتون ادامه یافت. همچنین در انتها به بررسی مفهومی بسیار مهم به نام مکان‌یابی که برای پیاده‌سازی عملی الگوریتم بر روی ربات در محیط آزمایشگاهی ضروری است اشاره و از راهکاری نوین که در سال‌های اخیر مورد توجه قرار گرفته است، استفاده شد.
