--- a/Thesis/chapter4.tex
+++ b/Thesis/chapter4.tex
@@ -3,7 +3,7 @@
 
 \section{مقدمه}
 
-\section{پردازنده \lr{ARM} سری \lr{f101c8t6}}
+\section{پردازنده \lr{ARM} سری \lr{F103C8T6}}
 
 شاید واژه
 \lr{ARM}
@@ -26,8 +26,28 @@
 	\caption[]{ \cite{STM32F101}}
 	\label{پایه‌های آرم}
 \end{figure}
-
-
+\newpage
+از مشخصات فنی آن می‌توان به موارد زیر اشاره کرد:
+\begin{itemize}
+	\item
+	ولتاژ کاری: 7.2 تا 6.3 ولت
+	\item
+	 فرکانس: ماکزیمم 72 مگاهرتز
+	\item
+	 تعداد پین‌های ورودی/خروجی: 37
+	\item
+	 تعداد پین‌های
+	 \lr{PWM}
+	 : 12
+	 
+	\item
+	 تایمر: 3+1
+	\item
+	 پروتکل های ارتباطی:
+	 \lr{I2C},
+	 \lr{SPI},
+	 \lr{UART,USART}
+\end{itemize}
 \section{ماژول \lr{ESP32-CAM}}
 
 ماژول
@@ -49,8 +69,7 @@
 	دوربین: از دوربین های \lr{OV2640} پشتیبانی می‌کند که دارای 2 مگاپیکسل روی سنسور با اندازه آرایه  1622 × 1200\lr{UXGA} پیکسل هستند.
 \end{itemize}
 
-
-
+\newpage
 برای اتصال این ماژول به کامپیوتر و برنامه‌ریزی
 \noindent\unskip\LTRfootnote{Programming}
 آن می‌توان از دو روش استفاده کرد:
@@ -69,13 +88,21 @@
 	\label{ماژول ای اس پی}
 \end{figure}
 
-نکته بسیار مهم اینکه برای برنامه ریزی شدن این ماژول باید حتما حین برنامه ریزی دو پایه ی \lr{Io0} و\lr{GND} به یکدیگر متصل باشند. همچنین پس از تکمیل برنامه ریزی باید اتصال این دو پایه را قطع کرد.\\ 
+نکته بسیار مهم اینکه برای برنامه ریزی شدن این ماژول باید حتما حین برنامه ریزی دو پایه ی
+\lr{Io0}
+و
+\lr{GND}
+\textbf{به یکدیگر}
+متصل باشند. همچنین پس از تکمیل برنامه ریزی باید اتصال این دو پایه را
+\textbf{قطع}
+کرد.
 
+\newpage
 \section{دوربین \lr{OV2640}}
 دوربین \lr{OV2640} یک سنسور تصویر \lr{CMOS} با رزولوشن بالا است که توسط شرکت \lr{OmniVision} تولید می‌شود.این دوربین به ویژه برای برنامه‌هایی مناسب است که نیاز به تصاویر با کیفیت بالا و ویژگی‌های پیشرفته دارند. از آنجا که این دوربین بسیار محبوب و پرطرفدار است، در بسیاری از پروژه‌های الکترونیک و رباتیک استفاده می‌شود، از جمله پروژه‌هایی که به آن اشاره کردید، یعنی ربات عنکبوتی چهار پا.
 
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.4\textwidth]{./images/Chapter4/OV2640}
 	\caption[دوربین \lr{OV2640}]{دوربین \lr{OV2640} \cite{OV2640}}
@@ -130,8 +157,27 @@
 \section{تجهیزات مکانیکی}
 
 \subsection{سایر قطعات متصل کننده}
-پین هدر ها و ...
-
+\subsubsection{پین‌هدر}
+پین‌هدر ها به دو دسته نر و ماده تقسیم می‌شوند که در شکل های
+\ref{پین‌هدر نر}
+و
+\ref{پین‌هدر ماده}
+قابل مشاهده است. از پین‌هدر های نر برای اتصالات متفرقه مخصوصا در سیم‌کشی استفاده شده است.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.4\textwidth]{./images/Chapter4/PinHeaderMale}
+	\caption[پین‌هدر نر]{پین‌هدر نر \cite{PinHeaderMale}}
+	\label{پین‌هدر نر}
+\end{figure}
+ از پین‌هدر های ماده به صورت دو خط موازی و بر روی برد هزار سوراخ استفاده شده است تا برد
+ \lr{STM32}
+ با پایه های خود بر روی آن قرار گیرد.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.4\textwidth]{./images/Chapter4/PinHeaderFemale}
+	\caption[پین‌هدر ماده]{پین‌هدر ماده\cite{PinHeaderFemale}}
+	\label{پین‌هدر ماده}
+\end{figure}
 \section{جمع بندی}
 همانطور که در بخش های این فصل بررسی شد، تمامی سخت‌افزار های استفاده شده در پروژه اعم از الکترونیکی و یا مکانیکی و یا سایر تجهیزات همگی با در نظر گرفتن کاربری تا حدامکان بصورت اقتصادی انتخاب شده و همچنین قابل دسترس در بازار ایران می‌باشند.
 از سوی دیگر داشتن شناخت کافی از جزئیات و اطلاعات فنی هریک از سخت‌افزار‌ها منجر به انتخاب  قطعات معرفی شده در کمترین زمان ممکن انجامید.
