--- a/Thesis/en_title.tex
+++ b/Thesis/en_title.tex
@@ -3,25 +3,25 @@
 \baselineskip=.6cm
 \begin{latin}
 
-\latinfaculty{Department of ...}
+\latinfaculty{Department of Electrical Engineering}
 
 
-\latintitle{Title of Thesis}
+\latintitle{Implementation of path planning algorithm for spider robot and improve its performance}
 
 
-\firstlatinsupervisor{Dr. }
+\firstlatinsupervisor{Dr. M.A.Khosravi }
 
 %\secondlatinsupervisor{Second Supervisor}
 
-\firstlatinadvisor{Dr. }
+\firstlatinadvisor{Dr. M.Shafie}
 
 %\secondlatinadvisor{Second Advisor}
 
-\latinname{Name}
+\latinname{Sajad}
 
-\latinsurname{Surname}
+\latinsurname{Ghadiri}
 
-\latinthesisdate{Month \& Year}
+\latinthesisdate{Sep \& 2023}
 
 \latinvtitle
 \end{latin}
