--- a/Thesis/references.bib
+++ b/Thesis/references.bib
@@ -161,6 +161,21 @@
 	year         = {},
 	note         = {},
 }
+@Misc{PinHeaderMale,
+	author       = {},
+	title        = {},
+	howpublished = {\href{https://www.electrokit.com/en/product/pin-header-2-54mm-1x40p-long-pins/}{https://www.electrokit.com/en/product/pin-header-2-54mm-1x40p-long-pins/}},
+	year         = {},
+	note         = {},
+}
+
+@Misc{PinHeaderFemale,
+	author       = {},
+	title        = {},
+	howpublished = {\href{https://ardushop.ro/en/home/114-40x-female-pin-header.html}{https://ardushop.ro/en/home/114-40x-female-pin-header.html}},
+	year         = {},
+	note         = {},
+}
 
 @Misc{AccessPoint,
 	author       = {},
