--- a/Thesis/dicen2fa.tex
+++ b/Thesis/dicen2fa.tex
@@ -9,25 +9,32 @@
 {\hfill\bf  \lr{A}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Automorphism}{خودریختی}
+\englishTOfarsi{Access Point}{نقطه دسترسی}
+\englishTOfarsi{Actuator}{عملگر}
+\englishTOfarsi{Artificial Potential Field}{میدان پتانسیل مصنوعی}
+\englishTOfarsi{Ant Colony Optimization}{بهینه‌سازی کلونی مورچه‌ها}
+\englishTOfarsi{Assemble}{سرهم کردن}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{B}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Bijection}{دوسویی}
+\englishTOfarsi{Base}{تکیه‌گاه}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{C}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Cycle group}{گروه دوری}
+\englishTOfarsi{Conventional}{مرسوم}
+\englishTOfarsi{Client}{کاربر}
+\englishTOfarsi{Cell Decomposition}{تجزیه سلولی}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{D}}
 %%\vspace*{1.5mm}
 
 \englishTOfarsi{Degree}{درجه}
+\englishTOfarsi{Dynamic}{پویا}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{E}}
@@ -45,25 +52,25 @@
 {\hfill\bf   \lr{G}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Group}{گروه}
+\englishTOfarsi{Graph}{گراف}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{H}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Homomorphism}{همریختی}
+\englishTOfarsi{Heuristic}{ابتکاری}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{I}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Invariant}{پایا}
+\englishTOfarsi{Internet Protocol address}{آدرس توافقتی اینترنت}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{L}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Lift}{بالابر}
+\englishTOfarsi{Legged Robots}{ربات‌های پادار}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{M}}
@@ -71,57 +78,80 @@
 
 \englishTOfarsi{Module}{مدول}
 \englishTOfarsi{Method}{روش}
+\englishTOfarsi{Moving Platform}{صفحه متحرک}
+\englishTOfarsi{Mobile Robot}{ربات متحرک}
+\englishTOfarsi{Mode}{حالت}
+
 \vspace*{3mm}
 {\hfill\bf   \lr{N}}
 %%\vspace*{1.5mm}
 
 \englishTOfarsi{Nested}{تو در تو، متوالی}
+\englishTOfarsi{Network}{شبکه}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{O}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{One to One}{یک به یک}
+\englishTOfarsi{Online}{برخط}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{P}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Permutation group}{گروه جایگشتی}
+\englishTOfarsi{Probabilistic Road map}{نقشه راه احتمالی}
+\englishTOfarsi{Particle Swarm Optimization}{بهینه‌سازی ازدحام ذرات}
+\englishTOfarsi{Pseudocode}{شبه‌کد}
+\englishTOfarsi{Path}{مسیر}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{Q}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Graph}{گراف}
+\englishTOfarsi{Quadruped Spider Robots}{ربات‌های عنکبوتی چهارپا}
+
 
  \vspace*{3mm}
 {\hfill\bf   \lr{R}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Reducible}{تحویل پذیر}
+\englishTOfarsi{Request}{درخواست}
+\englishTOfarsi{Respond}{پاسخ}
+\englishTOfarsi{Road Map}{نقشه راه}
+\englishTOfarsi{Real Time}{بلادرنگ}
+\englishTOfarsi{Rapidly Exploring Random Tree}{درخت جستجوی تصادفی}
+\englishTOfarsi{Router}{راه‌پیما}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{S}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Sequence}{دنباله}
+\englishTOfarsi{Spider Robots}{ربات‌های عنکبوتی}
+\englishTOfarsi{Station}{ایستگاه}
+\englishTOfarsi{State}{وضعیت}
 
  \vspace*{3mm}
 {\hfill\bf   \lr{T}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Trivial character}{سرشت بدیهی}
+\englishTOfarsi{Task}{وظیفه}
 
 \vspace*{3mm}
 {\hfill\bf   \lr{U}}
 %%\vspace*{1.5mm}
 
-\englishTOfarsi{Unique}{منحصربفرد}
+\englishTOfarsi{Uniform distribution}{توزیع یکنواخت}
+
 
 \vspace*{3mm}
 {\hfill\bf   \lr{V}}
 %%\vspace*{1.5mm}
 
 \englishTOfarsi{Vector space}{فضای برداری}
+
+\vspace*{3mm}
+{\hfill\bf   \lr{W}}
+%%\vspace*{1.5mm}
+
+\englishTOfarsi{Wheeled Robot}{ربات چرخدار}
 \end{multicols}
